--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="es">
 <meta charset="utf-8"/>
 <html>
+<body>
+	<p>El certificat de professionalitat de confecció i publicació
+	de pàgines web és molt interessant</p>
 
-
+</body>
 
 
 </html>
