--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8"/>
 <html>
 <body>
-	<p>El certificat de professionalitat de confecció i publicació
+	<p style="color: red">El certificat de professionalitat de confecció i publicació
 	de pàgines web és molt interessant</p>
 
 </body>
